implementation some frontend
